--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.21.15",
-    "@hookform/resolvers": "^3.1.1",
+    "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.0.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -33,9 +33,11 @@
     "crisp-sdk-web": "^1.0.21",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "i": "^0.3.7",
     "lucide-react": "^0.259.0",
     "next": "13.4.9",
     "next-themes": "^0.2.1",
+    "npm": "^10.2.1",
     "openai": "^3.3.0",
     "postcss": "8.4.25",
     "react": "18.2.0",
